spec/error_foul_closure_in_pure.expected
spec/error_foul_closure_in_pure.kex:5:17: error: Cannot call foul function 'IO.printLine' from pure context
Aborted: fix type errors before running (use --no-check to skip).
